# career-avatar

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
career_avatar/: app.py  avatar.py  evaluation.py  loader.py  logger.py  parameters.py  prompt.py
career_avatar/client/: openai.py  pushover.py
career_avatar/data/: README.md
career_avatar/tools/: record_unknown_question.py  record_user_details.py  tools.py
